# airdrop-contract

contracts/merkle-distributor/: Cargo.toml
contracts/merkle-distributor/src/: constant.rs  lib.rs  token.rs
