[package]
name = "merkle-distributor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "merkle_distributor"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
near-contract-standards = "5.5.0"
near-sdk = "5.5.0"
near-gas = "0.3.0"
borsh = "1.4.0"
serde = "1.0"
serde_with = "3.7.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"]}

[dev-dependencies]
near-sdk = {version = "5.5.0", features = ["unit-testing"]}
near-parameters = { version = "0.26.0" }